--- a/DBSCAN/DBSCAN.vcxproj.filters
+++ b/DBSCAN/DBSCAN.vcxproj.filters
@@ -36,4 +36,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="example.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
