--- a/DBSCAN/DBSCAN.vcxproj
+++ b/DBSCAN/DBSCAN.vcxproj
@@ -170,6 +170,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="example.txt" />
+    <Text Include="example2.txt" />
+    <Text Include="polar.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
