--- a/DBSCAN/DBSCAN.vcxproj.filters
+++ b/DBSCAN/DBSCAN.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Funcs.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Clustering.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DBSCAN.cpp">
@@ -33,6 +36,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="Funcs.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Clustering.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
