--- a/DBSCAN/DBSCAN.vcxproj.filters
+++ b/DBSCAN/DBSCAN.vcxproj.filters
@@ -52,5 +52,20 @@
     <Text Include="polar.txt">
       <Filter>Файлы ресурсов</Filter>
     </Text>
+    <Text Include="coord.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="scene_1_all_mod.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="grid_coord.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="grid_coord_commas.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="clustering3.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
   </ItemGroup>
 </Project>
